# HoldSayByDouBao

./: .env.example  .gitignore  README.md  README_WINDOWS.md  control.bat  doubaoctl  doubaoctl.ps1  index.html  main.py  main_win.py  pyproject.toml  setup.bat  update.bat
