[project]
name = "autosb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "python-socks[asyncio]>=2.8.1",
    "sounddevice>=0.5.5",
    "websockets>=16.0",
]
